--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3797,6 +3797,10 @@ input, select, textarea {
 		background-position: 25% 23%;
 	}
 
+	body.is-mobile #wrapper > section.intro > content {
+		max-height: 25rem;
+	}
+
 	#wrapper:before {
 		transition: opacity 1s ease;
 	}
